SERVER-9620 Index can be made multikey if a prefix of it is a shard key

Allowed sharded collections to have multikey indexes based on the
invariant that shard key values can never be arrays.