src/mongo/db/dbhelpers.cpp
@@ -288,9 +288,13 @@ namespace mongo {
         Collection* collection = cc().database()->getCollection( ns );
         if ( !collection )
             return false;
+
+        // Allow multiKey based on the invariant that shard keys must be single-valued.
+        // Therefore, any multi-key index prefixed by shard key cannot be multikey over
+        // the shard key fields.
         const IndexDescriptor* idx =
             collection->getIndexCatalog()->findIndexByPrefix(shardKeyPattern,
-                                                             true /* require single key */);
+                                                             false /* allow multi key */);
 
         if ( idx == NULL )
             return false;
